# health

./: .gitignore  README.md  docker-compose.yml
data/sql/: Dockerfile
data/sql/postgresql/: 10_schema.sql
data/sql/postgresql/common/: tables.sql
data/sql/postgresql/domain/: create.sql  procs.sql  tables.sql
data/sql/postgresql/domain/procs/: domain_active_toggle.sql  domain_list.sql  domain_update.sql
data/sql/postgresql/domain/tables/: domains.sql
data/sql/postgresql/health/: procs.sql  tables.sql
data/sql/postgresql/health/tables/: admission_sources.sql  emergency_contacts.sql  patient.sql  (+6 more)
data/sql/postgresql/iam/: procs.sql
services/rust/: Cargo.toml  db.txt  notes
services/rust/api/: Cargo.toml
services/rust/api/curl/: domain_tests.txt  tests.txt  user_tests.txt
services/rust/api/src/: main.rs
services/rust/api/src/endpoints/: domain.rs  mod.rs  patient.rs  role.rs  status.rs  user.rs
services/rust/api/src/middleware/: cors.rs  mod.rs  user.rs
services/rust/api/src/models/: domain.rs  mod.rs  user.rs
services/rust/api/src/services/: db.rs  jwt.rs  mod.rs  token.rs
services/rust/data/postgres/: Cargo.toml
services/rust/utils/jwt/: Cargo.toml
services/swagger/: Dockerfile  domains.json  patients.json  roles.json  swagger.json  users.json
ui/: Dockerfile
ui/nginx/: health.conf
ui/src/admin/: angular.json  package-lock.json  package.json
ui/src/admin/src/: index.html  styles.css
ui/src/health/: README.md  angular.json  package-lock.json  package.json
ui/src/health/src/: index.html  material.module.ts  styles.css
(+101 files in other folders)
