[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
env_logger = "*"
futures = "*"

serde = { version = "*", features = ["derive"] }
serde_json = "1.0"

http = "*"
actix-web = { version = "4", features = ["rustls"] }
actix-http = "*"

jwt = { path = "../utils/jwt" }
postgres = { path = "../data/postgres" }